css/editoria11y.css
.ed11y-reset,
.ed11y-reset p,
.ed11y-reset button,
.ed11y-reset li,
.ed11y-reset ul,
.ed11y-reset label,
.ed11y-reset a {
  font-family: Tahoma, Roboto, "Helvetica Neue", sans-serif !important;
  line-height: 1.5 !important;
  font-weight: 400 !important;
  margin: 0 !important;
  padding: 0 !important;
  border: 0 !important;
  box-shadow: none !important;
  background: none !important;
  color: #404040 !important;
  font-size: inherit !important;
}
.ed11y-reset {
  font-size: 16px !important;
}
.ed11y-reset div {
  box-sizing: border-box !important;
}
.ed11y-reset p {
  padding-bottom: 16px !important;
}
.ed11y-tip a,
.ed11y-container a {
  font-weight: 500 !important;
  text-decoration: underline !important;
  border: none !important;
  box-shadow: none !important;
  color: inherit !important;
}
.ed11y-tip p {
  color: #41576d !important;
}
.ed11y-tip a:hover,
.ed11y-container a:hover {
  color: #0a65aa !important;
}
.ed11ytip-heading {
  font-size: 18px;
  font-weight: 600;
  padding-bottom: 0;
  margin: 0 12px 16px 0;
  color: #112f4e;
}
.ed11y-panel-header {
  position: relative;
  padding: 15px 36px 15px 15px;
  color: #333;
  height: 74px;
  width: 100%;
  line-height: 22px;
  background: #fff;
}
.ed11y-reset .ed11y-small {
  font-size: 13px !important;
}

/* ===== Alert and warning highlights ============================================= */

.ed11y-error-btn,
.ed11y-warning-btn,
.ed11y-link-warning-btn,
.ed11y-error-text-btn {
  font-size: 0 !important;
  width: auto !important;
  border-radius: 50% !important;
  border: none !important;
  position: absolute;
  margin: 10px 0 0 10px !important;
  z-index: 499;
  padding: 7px !important;
  vertical-align: middle;
  background: #d30017 !important;
  cursor: pointer;
  box-shadow: 0 0 6px 0 #0000004f !important;
  transition: all .2s ease-in-out;
  min-width: 0;
  outline: 0 !important;
}
.ed11y-warning-btn,
.ed11y-link-warning-btn {
  background: #ffc800 !important;
}

.ed11y-link-warning-btn,
.ed11y-error-text-btn {
  margin: -30px 0 0 -12px !important;
  padding: 18px !important;
}

.ed11y-instance-inline + .ed11y-instance-inline > button {
  margin-top: 16px !important;
  box-shadow: none;
}
.ed11y-instance-inline + .ed11y-instance-inline .ed11y-tip {
  margin-top: 8px !important;
}





.ed11y-link-text-warning {
  box-shadow: 0 0 0 4px #ffc800 !important;
  border-radius: 2px;
  border-color: transparent !important;
}

button.ed11y-pop {
  box-shadow: inset 0 0 0 4px #0000 !important;
  transition: box-shadow .1s ease-out !important;
}
button.ed11y-pop:hover,
button.ed11y-pop:focus {
  box-shadow: inset 0 0 0 4px #5294ca !important;
}
.ed11y-headings-fail {
  color: #c22326;
}
.ed11y-error-border {
  outline: 5px solid #c22326;
}
.ed11y-link-text-fail {
  background-color: #c22326;
  border-radius: 0.25em;
  padding: 5px;
  color: white;
}
.ed11y-text-warning,
.ed11y-uppercase-warning {
  background-color: #ffc80033;
  box-shadow: 4px 0 #ffc80033, -4px 0 #ffc80033;
}
.ed11y-reset .ed11y-text-warning {
  background-color: #ffc80033 !important;
  box-shadow: 4px 0 #ffc80033, -4px 0 #ffc80033 !important;
}

.ed11y-warning-border {
  outline: 5px solid #ffc800;
}
.ed11y-link-warning-btn svg,
.ed11y-error-text-btn svg {
  width: 20px;
  position: absolute;
  margin: -10px 0 0 -10px !important;
  background: #ffc800;
  border-radius: 48px;
  height: 20px;
}
.ed11y-error-text-btn svg {
  background: #d30017;
}
#ed11y-container svg,
.ed11y-link-warning-btn svg {
  overflow: hidden;
  vertical-align: top;
}


/* ===== Info panel ============================================= */

#ed11y-panel {
  z-index: 8890;
  box-shadow: 2px 2px 6px #0004, 0 0 0 1px #0002 !important;
  position: fixed;
  bottom: 16px;
  right: 21px;
  width: 310px;
  max-width: calc(100% - 28px);
  text-align: left;
  transform: scale(0);
  transform-origin: 100% 100%;
  border-radius: .25em;
  opacity: 0;
  transition: transform .2s, opacity .2s;
}
.ed11y-panel a {
  text-decoration: underline !important;
  color: #004c9b !important;
  border-bottom: 0;
}

.ed11y-panel a:hover,
.ed11y-panel a:focus {
  color: #111 !important;
}

#ed11y-container .ed11y-panel.ed11y-active {
  height: auto;
  opacity: 1;
  visibility: visible;
  transform: scale(1);
  transition: transform .2s, opacity .2s;
}

#ed11y-container .ed11y-fullcheck-header {
  padding: 0 15px;
  line-height: 28px !important;
  background: #ccc;
  font-size: 12px;
  color: #404040;
  font-weight: 600;
}
#ed11y-container .ed11y-fullcheck-header p {
  padding: 4px 0 8px !important;
  font-size: 12px !important;
}

.ed11y-bold {
  font-weight: 600;
}

#ed11y-no-errors,
#ed11y-warnings,
#ed11y-errors-found,
.ed11y-fullcheck {
  opacity: 0;
  display: none;
}
#ed11y-no-errors.ed11y-active,
#ed11y-warnings.ed11y-active,
#ed11y-errors-found.ed11y-active,
.ed11y-fullcheck.ed11y-active,
#ed11y-summary-toggle.ed11y-active {
  opacity: 1;
  display: table;
}
.ed11y-fullcheck {
  padding-bottom: 0;
  width: 100%;
  transition: all .60s ease;
  border-bottom: 1px solid #dbdbdbbf;
}
.ed11y-fullcheck .ed11y-header-button {
  box-shadow: inset 1px -1px #00000014 !important;
  background: transparent !important;
  color: #555 !important;
  opacity: 1;
  padding: 4px 8px 13px 9px !important;
}
.ed11y-fullcheck button:hover,
.ed11y-fullcheck button:focus {
  background: #fff !important;
}
.ed11y-jumplink {
  display: inline-block;
}
#ed11y-panel .ed11y-next-button {
  position: absolute;
  top: 0;
  right: 0;
  font-size: 12px !important;
  height: 28px !important;
}

#ed11y-container .ed11y-th-img svg {
  margin: 8px 14px 0 0;
}

#ed11y-container #ed11y-main-toggle {
  position: fixed;
  bottom: 15px;
  right: 12px;
  background-color: #5181C6 !important;
  color: #fff !important;
  border-radius: 50px !important;
  box-shadow: none !important;
  cursor: pointer;
  padding: 2px !important;
  margin: 0 !important;
  border:none !important;
  z-index: 99999;
  transition: all .1s ease-in-out;
  outline: none !important;
}
/* ... */

